# Letta-MCP-server

./: .dockerignore.rust  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.prebuilt  Dockerfile.rust  MCP_FIX_SUMMARY.md  MCP_OUTPUT_SCHEMA_ISSUE_REPORT.md  MERGE_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_SDK_MIGRATION_PROGRESS.md  README.md  REDIRECT_FIX.md  SCHEMA_FIX_DOCUMENTATION.md  SDK_V1_ASSESSMENT.md  SDK_V1_MIGRATION_SUMMARY.md  compose.yaml  compose.yaml.old  docker-compose.rust.yml  find-missing-additional-props.sh  fix-all-schemas.py  fix-schemas.js  integration-test.js  opencode.json  package-lock.json  package.json  rust-proxy.cjs  test-container.js  test-sdk.js
.github/workflows/: docker-build.yml  rust-docker-build.yml
letta-server/: Cargo.toml  Cargo.toml.backup
letta-server/src/: lib.rs  main.rs
letta-server/src/tools/: agent_advanced.rs  file_folder_ops.rs  job_monitor.rs  mcp_ops.rs  memory_unified.rs  mod.rs  source_manager.rs  tool_manager.rs
letta-types/: Cargo.toml
letta-types/src/: lib.rs
rust/: .gitignore  COVERAGE_SUMMARY.md  Cargo.toml  Dockerfile  IMPLEMENTATION_ROADMAP.md  OVERALL_STATUS.md  README.md  SDK_API_COVERAGE_ANALYSIS.md  SDK_INTEGRATION_COMPLETE.md  SOURCE_MANAGER_COMPLETE.md  TOOL_MANAGER_COMPLETE.md  check_schema.sh  docker-compose.yml  docker-entrypoint.sh  generate-flattened.py  nginx.conf  test_schema.rs  test_schema_defs.rs  test_schema_output.sh
rust/letta-server/: Cargo.toml
rust/letta-server/src/: client.rs  lib.rs  main.rs
rust/letta-server/src/tools/: agent_advanced.rs  file_folder_ops.rs  job_monitor.rs  mcp_ops.rs  memory_unified.rs  mod.rs  source_manager.rs  tool_manager.rs
rust/letta-types/: Cargo.toml
rust/letta-types/src/: lib.rs
scripts/: register-mcp-servers.js
src/core/: logger.js  response-validator.js  server.js
src/test/: server.test.js
src/test/core/: api-client.test.js  error-handling.test.js  server-initialization.test.js  tool-registration.test.js
src/test/tools/agents/: retrieve-agent.test.js
src/test/tools/memory/: delete-memory-block.test.js
src/test/tools/messages/: create-conversation-entry.test.js  list-messages.test.js
src/test/tools/models/: list-embedding-models.test.js  list-llm-models.test.js
src/test/tools/passages/: list-passages.test.js  search-archival-memory.test.js
src/test/tools/prompts/: list-prompts.test.js  use-prompt.test.js
src/test/utils/: mock-server.js
src/tools/: deprecated-tools.js  enhance-tools.js  index.js  output-schemas.js
src/tools/__tests__/: letta-agent-advanced.test.js  letta-file-folder-ops.test.js  letta-job-monitor.test.js  letta-mcp-ops.test.js  letta-memory-unified.test.js  letta-source-manager.test.js  letta-tool-manager.test.js
src/tools/agents/: bulk-delete-agents.js  clone-agent.js  create-agent.js  delete-agent.js  export-agent.js  get-agent-summary.js  import-agent.js  letta-agent-advanced.js  list-agent-tools.js  list-agents.js  modify-agent.js  prompt-agent.js  retrieve-agent.js
src/tools/files/: letta-file-folder-ops.js
src/tools/jobs/: letta-job-monitor.js
src/tools/mcp/: add-mcp-tool-to-letta.js  letta-mcp-ops.js  list-mcp-servers.js  list-mcp-tools-by-server.js
src/tools/memory/: attach-memory-block.js  create-memory-block.js  delete-memory-block.js  letta-memory-unified.js  list-memory-blocks.js  read-memory-block.js  search-memory.js  update-memory-block.js
src/tools/messages/: create-conversation-entry.js  list-messages.js
src/tools/models/: list-embedding-models.js  list-llm-models.js
src/tools/passages/: create-passage.js  delete-passage.js  list-passages.js  modify-passage.js  search-archival-memory.js
src/tools/prompts/: list-prompts.js  use-prompt.js
src/tools/schemas/: agent-advanced-schemas.js  file-ops-schemas.js  job-monitor-schemas.js  mcp-ops-schemas.js  memory-unified-schemas.js  response-schemas.js  source-manager-schemas.js  tool-manager-schemas.js
src/tools/sources/: letta-source-manager.js
src/tools/tools/: attach-tool.js  bulk-attach-tool.js  letta-tool-manager.js  upload-tool.js
tests/: debug-create-passage.js  debug-response.js  integration-phase2.test.js  test-sdk-pilot.js
