[workspace]
members = [
    "letta-server",
    "letta-types",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# TurboMCP
turbomcp = { version = "2.0.0-rc.3", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }

# Letta SDK
letta = "0.1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
