[package]
name = "letta-server"
version = "2.0.1"
edition = "2021"
authors = ["Oculair Media"]
description = "Letta MCP Server - Rust implementation using TurboMCP"
license = "MIT"

[[bin]]
name = "letta-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
turbomcp = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
letta = { workspace = true }

# TurboMCP internal crates (required by macros)
turbomcp-protocol = "2.0.0-rc.3"
turbomcp-server = "2.0.0-rc.3"

# Local dependencies
letta-types = { path = "../letta-types" }

[dev-dependencies]
tokio-test = "0.4"
