[package]
name = "letta-server"
version = "2.0.1"
edition = "2021"
authors = ["Oculair Media"]
description = "Letta MCP Server - Rust implementation using TurboMCP"
license = "MIT"

[[bin]]
name = "letta-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
# Use forked TurboMCP with FlattenTool derive macro
turbomcp = { git = "https://github.com/oculairmedia/turbomcp.git", branch = "feature/flatten-structs", features = ["http", "schemars"] }
turbomcp-macros = { git = "https://github.com/oculairmedia/turbomcp.git", branch = "feature/flatten-structs" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
letta = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }

# TurboMCP internal crates (required by macros) - use forked versions
turbomcp-protocol = { git = "https://github.com/oculairmedia/turbomcp.git", branch = "feature/flatten-structs" }
turbomcp-server = { git = "https://github.com/oculairmedia/turbomcp.git", branch = "feature/flatten-structs" }
turbomcp-transport = { git = "https://github.com/oculairmedia/turbomcp.git", branch = "feature/flatten-structs", features = ["http"] }

# Local dependencies
letta-types = { path = "../letta-types" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["http", "schemars"]
http = ["turbomcp/http"]
schemars = ["turbomcp/schemars"]
